--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -241,13 +241,13 @@
 
                 <!--// ListView with menu list items //-->
                 <Menu Background="Transparent"
-      BorderBrush="Transparent"
-      ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                      BorderBrush="Transparent"
+                      ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                     <MenuItem HorizontalAlignment="Left"
-              Margin="0,0,0,15" MouseEnter="ListViewItem_MouseEnter">
+                              Margin="0,0,0,15" MouseEnter="ListViewItem_MouseEnter">
                         <MenuItem.Header>
                             <StackPanel Orientation="Horizontal" Width="230">
-                                <Image Source="Assets/img_home.png" Stretch="None" Margin="12,0,0,0"/>
+                                <Image Source="Assets/home.png" Width="30" Margin="12,0,0,0"/>
                                 <TextBlock Text="Home" Margin="25,0,0,0" Style="{StaticResource font_style}"/>
                             </StackPanel>
                         </MenuItem.Header>
@@ -261,7 +261,7 @@
                               Margin="0,0,0,15" MouseEnter="ListViewItem_MouseEnter" Click="bttnCompresion_Click">
                         <MenuItem.Header>
                             <StackPanel Orientation="Horizontal" Width="230">
-                                <Image Source="Assets/img_home.png" Stretch="None" Margin="12,0,0,0"/>
+                                <Image Source="Assets/compresion.png" Width="30" Margin="12,0,0,0"/>
                                 <TextBlock Text="Compresión" Margin="25,0,0,0" Style="{StaticResource font_style}"/>
                             </StackPanel>
                         </MenuItem.Header>
@@ -275,7 +275,7 @@
               Margin="0,0,0,15" MouseEnter="ListViewItem_MouseEnter">
                         <MenuItem.Header>
                             <StackPanel Orientation="Horizontal" Width="230">
-                                <Image Source="Assets/img_home.png" Stretch="None" Margin="12,0,0,0"/>
+                                <Image Source="Assets/formato.png" Width="30" Margin="12,0,0,0"/>
                                 <TextBlock Text="Formato" Margin="25,0,0,0" Style="{StaticResource font_style}"/>
                             </StackPanel>
                         </MenuItem.Header>
