--- a/Presentacion/Compresion.xaml
+++ b/Presentacion/Compresion.xaml
@@ -9,6 +9,32 @@
       Title="Compresion">
 
     <Grid>
-        <TextBlock HorizontalAlignment="Right" Margin="10,10,0,0" TextWrapping="Wrap" Text="Compresion" VerticalAlignment="Top" Height="30" Width="120" FontSize="20"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0" AllowDrop="True" Drop="Grid_Drop">
+            <Rectangle Fill="LightGray" Margin="20,20,20,20" Stroke="Black"/>
+        </Grid>
+        <GroupBox Grid.Column="1" Height="200" Width="300" VerticalAlignment="Top" Margin="0,50,0,0">
+            <GroupBox.Header>
+                <TextBlock Text="Configuracion de Compresión" FontSize="15" Foreground="White"/>
+            </GroupBox.Header>
+            <Grid Height="100" Margin="20,0,20,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="Algoritmo:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0"/>
+                <ComboBox Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Width="100"/>
+                <TextBlock Text="Nivel de Compresión:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0"/>
+                <TextBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Width="100"/>
+            </Grid>
+        </GroupBox>
     </Grid>
 </Page>
