--- a/Presentacion/Compresion.xaml
+++ b/Presentacion/Compresion.xaml
@@ -19,10 +19,10 @@
         </Grid.RowDefinitions>
         <Menu Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
             <MenuItem Header="Archivo">
-                <MenuItem x:Name="bttnNuevo" Header="Nuevo"/>
+                <MenuItem x:Name="BttnNuevo" Header="Nuevo" Click="BttnNuevo_Click"/>
                 <Separator/>
-                <MenuItem x:Name="bttnAbrir" Header="Abrir"/>
-                <MenuItem x:Name="bttnGuardarMenu" Header="Guardar" IsEnabled="False" Click="bttnGuardar_Click"/>
+                <MenuItem x:Name="BttnAbrir" Header="Abrir" Click="BttnAbrir_Click"/>
+                <MenuItem x:Name="BttnGuardarMenu" Header="Guardar" IsEnabled="False" Click="BttnGuardar_Click"/>
                 <Separator/>
                 <MenuItem Header="Salir"/>
             </MenuItem>
@@ -30,9 +30,9 @@
                 <MenuItem Header="Acerca de"/>
             </MenuItem>
         </Menu>
-        <Grid x:Name="gridDrop" Grid.Column="0" Grid.Row="1" AllowDrop="True" Drop="gridDrop_Drop" Background="#EAEAEA" Margin="20">
+        <Grid x:Name="GridDrop" Grid.Column="0" Grid.Row="1" AllowDrop="True" Drop="GridDrop_Drop" Background="#EAEAEA" Margin="20">
             <Border BorderBrush="#007ACC" BorderThickness="2" CornerRadius="5" Margin="20">
-                <Image x:Name="imgDrop" Source="/Assets/add.png"/>
+                <Image x:Name="ImgDrop" Source="/Assets/add.png"/>
             </Border>
         </Grid>
             <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Margin="0,150,0,0" Width="300">
@@ -50,15 +50,14 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <TextBlock Text="Algoritmo:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0"/>
-                    <ComboBox x:Name="listAlgoritmos" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Width="100"/>
+                    <ComboBox x:Name="ListAlgoritmos" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Width="100"/>
                     <TextBlock Text="Nivel de Compresión:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0"/>
-                    <TextBox x:Name="txtFactor" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Width="100"/>
+                    <TextBox x:Name="TxtFactor" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Width="100"/>
                 </Grid>
             </GroupBox>
-            <ProgressBar Grid.Column="2" Width="300" Height="15" Margin="0,150,0,0"/>
         </Grid>
-        <Button x:Name="bttnGuardar" Grid.Column="2" Grid.Row="1" Height="30" Width="100"
+        <Button x:Name="BttnGuardar" Grid.Column="2" Grid.Row="1" Height="30" Width="100"
                 VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,50,75"
-                Content="Guardar solución" Click="bttnGuardar_Click"/>
+                Content="Guardar solución" Click="BttnGuardar_Click"/>
     </Grid>
 </Page>
