--- a/Presentacion/Formato.xaml
+++ b/Presentacion/Formato.xaml
@@ -5,10 +5,57 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ComprESI.Presentacion"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="600" d:DesignWidth="735"
       Title="Formato">
 
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Menu Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
+            <MenuItem Header="Archivo">
+                <MenuItem x:Name="BttnNuevo" Header="Nuevo" Click="BttnNuevo_Click"/>
+                <Separator/>
+                <MenuItem x:Name="BttnAbrir" Header="Abrir" Click="BttnAbrir_Click"/>
+                <MenuItem x:Name="BttnGuardarMenu" Header="Guardar" IsEnabled="False" Click="BttnGuardar_Click"/>
+                <Separator/>
+                <MenuItem Header="Salir"/>
+            </MenuItem>
+            <MenuItem Header="Ayuda">
+                <MenuItem Header="Acerca de"/>
+            </MenuItem>
+        </Menu>
+        <Grid x:Name="GridDrop" Grid.Column="0" Grid.Row="1" AllowDrop="True" Drop="GridDrop_Drop" Background="#EAEAEA" Margin="20">
+            <Border BorderBrush="#007ACC" BorderThickness="2" CornerRadius="5" Margin="20">
+                <Image x:Name="ImgDrop" Source="/Assets/add.png"/>
+            </Border>
+        </Grid>
+        <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Margin="0,150,0,0" Width="300">
+            <GroupBox VerticalAlignment="Top">
+                <GroupBox.Header>
+                    <TextBlock Text="Configuración de Compresión" FontSize="15"/>
+                </GroupBox.Header>
+                <Grid Height="100">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Text="Algoritmo:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0"/>
+                    <ComboBox x:Name="ListFormatos" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Width="100"/>
+                </Grid>
+            </GroupBox>
+        </Grid>
+        <Button x:Name="BttnGuardar" Grid.Column="2" Grid.Row="1" Height="30" Width="100"
+            VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,50,75"
+            Content="Guardar solución" Click="BttnGuardar_Click"/>
     </Grid>
 </Page>
