--- a/Presentacion/Formato.xaml
+++ b/Presentacion/Formato.xaml
@@ -18,16 +18,16 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Menu Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
-            <MenuItem Header="Archivo">
-                <MenuItem x:Name="BttnNuevo" Header="Nuevo" Click="BttnNuevo_Click"/>
+            <MenuItem Header="Archivo" FontFamily="/Fonts/Roboto-Light.ttf #Roboto">
+                <MenuItem x:Name="BttnNuevo" Header="Nuevo" Click="BttnNuevo_Click" FontFamily="/Fonts/Roboto-Light.ttf #Roboto"/>
                 <Separator/>
-                <MenuItem x:Name="BttnAbrir" Header="Abrir" Click="BttnAbrir_Click"/>
-                <MenuItem x:Name="BttnGuardarMenu" Header="Guardar" IsEnabled="False" Click="BttnGuardar_Click"/>
+                <MenuItem x:Name="BttnAbrir" Header="Abrir" Click="BttnAbrir_Click" FontFamily="/Fonts/Roboto-Light.ttf #Roboto"/>
+                <MenuItem x:Name="BttnGuardarMenu" Header="Guardar" IsEnabled="False" Click="BttnGuardar_Click" FontFamily="/Fonts/Roboto-Light.ttf #Roboto"/>
                 <Separator/>
-                <MenuItem Header="Salir"/>
+                <MenuItem x:Name="BttnSalir" Header="Salir" Click="BttnSalir_Click" FontFamily="/Fonts/Roboto-Light.ttf #Roboto"/>
             </MenuItem>
-            <MenuItem Header="Ayuda">
-                <MenuItem Header="Acerca de"/>
+            <MenuItem Header="Ayuda" FontFamily="/Fonts/Roboto-Light.ttf #Roboto">
+                <MenuItem Header="Acerca de" FontFamily="/Fonts/Roboto-Light.ttf #Roboto"/>
             </MenuItem>
         </Menu>
         <Grid x:Name="GridDrop" Grid.Column="0" Grid.Row="1" AllowDrop="True" Drop="GridDrop_Drop" Background="#EAEAEA" Margin="20">
@@ -38,7 +38,7 @@
         <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Margin="0,150,0,0" Width="300">
             <GroupBox VerticalAlignment="Top">
                 <GroupBox.Header>
-                    <TextBlock Text="Configuración de Compresión" FontSize="15"/>
+                    <TextBlock Text="Configuración de Formato" FontSize="15" FontFamily="/Fonts/Roboto-Light.ttf #Roboto"/>
                 </GroupBox.Header>
                 <Grid Height="100">
                     <Grid.ColumnDefinitions>
@@ -49,13 +49,13 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Text="Algoritmo:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0"/>
-                    <ComboBox x:Name="ListFormatos" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Width="100"/>
+                    <TextBlock Text="Formato:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0" FontFamily="/Fonts/Roboto-Light.ttf #Roboto"/>
+                    <ComboBox x:Name="ListFormatos" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Width="100"  FontFamily="/Fonts/Roboto-Light.ttf #Roboto"/>
                 </Grid>
             </GroupBox>
         </Grid>
         <Button x:Name="BttnGuardar" Grid.Column="2" Grid.Row="1" Height="30" Width="100"
             VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,50,75"
-            Content="Guardar solución" Click="BttnGuardar_Click"/>
+            Content="Guardar" Click="BttnGuardar_Click" FontFamily="/Fonts/Roboto-Light.ttf #Roboto"/>
     </Grid>
 </Page>
