--- a/Presentacion/Home.xaml
+++ b/Presentacion/Home.xaml
@@ -5,10 +5,10 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ComprESI.Presentacion"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="600" d:DesignWidth="735"
       Title="Home">
 
     <Grid>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" FontWeight="Bold" Foreground="Black">Bienvenido a ComprESI</TextBlock>
+        <Image Source="/Assets/img_background.png" Stretch="Fill"/>
     </Grid>
 </Page>
